--- a/src/app/components/findstore/findstore.component.css
+++ b/src/app/components/findstore/findstore.component.css
@@ -1,6 +1,23 @@
-@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
-#findstore {
-  background-color: #f2f2f2;
-  margin: 0px -15px;
+@import url("https://fonts.googleapis.com/css?family=Archivo|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
+h1 {
+  font-family: "Domine", serif;
+  font-size: 40px;
+  line-height: 1.3;
+}
+
+h2 {
+  font-family: "Archivo Black", sans-serif;
+}
+
+h4 {
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+h5 {
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
 }
 /*# sourceMappingURL=findstore.component.css.map */
