--- a/src/app/components/findstore/findstore.component.scss
+++ b/src/app/components/findstore/findstore.component.scss
@@ -1,11 +1,44 @@
-@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Archivo|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
 // font-family: 'Archivo Black', sans-serif;
 // font-family: 'Domine', serif;
+// font-family: 'Inconsolata', monospace;
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Roboto Condensed', sans-serif;
 // font-family: 'Roboto Slab', serif;
 
-#findstore {
-  background-color: #f2f2f2;
-  margin: 0px -15px;
+$font-h2: "Archivo Black",
+sans-serif;
+
+$font-nav: "Roboto Slab",
+serif;
+
+$font-h1: "Domine",
+serif;
+
+$font-h4: "Roboto Condensed",
+sans-serif;
+
+$font-generic: "Roboto",
+sans-serif;
+
+h1 {
+  font-family: $font-h1;
+  font-size: 40px;
+  line-height: 1.3;
+}
+
+h2 {
+  font-family: $font-h2;
+}
+
+h4 {
+  font-family: $font-h4;
+}
+
+h5 {
+  font-family: $font-h4;
+}
+
+p {
+  font-family: $font-generic;
 }
